@@ -8,12 +8,12 @@ balanceTheEquation=Balance the equation
 barCharts=Bar Charts
 check=Check
 game=Game
+hideMolecules=Hide molecules
 methane=Methane
 moleculesAreHidden=molecules are hidden
 next=Next
 none=None
 reaction0of1=Reaction {0} of {1}:
 showAnswer=Show Answer
-showMolecules=Show molecules
 tryAgain=Try Again
 water=Water
